# cookiecutter-python

./: README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  .pylintrc  LICENSE.BSD-3-Clause  LICENSE.MIT  Makefile  README.md  pyproject.toml  {{cookiecutter.project_slug}}.spec
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  __main__.py
